Fixed text alignment to center on 404.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@ span {
     text-transform: capitalize;
 }
 
+#error-page {
+    text-align: center;
+}
+
 /* index page css settings */
 
 .main-area {
